--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title> SAMPLE WEBPAGE</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
@@ -22,6 +24,15 @@
                 <a href="#" class="btn">WATCH VIDEO</a>
                 <a href="#" class="btn">LEARN MORE</a>
             </div>
+            
+            <div class="wrapper">
+                <a href="#" class="nav">
+                    <div class="one"></div>
+                    <div class="two"></div>
+                    <div class="three"></div>
+                </a>
+            </div>
+            
         </header>
     </body>
 </html>
